[tool.poetry]
name = "audio-anim"
version = "0.1.0"
description = "A package to animate audio files."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "audio_anim"}]

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
moviepy = "^1.0.3"
decorator = "^4.4.2"
typer = "^0.9.0"

[tool.poetry.scripts]
audio-anim = "audio_anim.__main__:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
